// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should display the Header component  1`] = `
.emotion-85 {
  background-color: #fff;
}

.emotion-36 {
  background-color: #4b5e40;
  color: #fff;
  min-height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .emotion-36 .emotion-13 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-36 .emotion-17 {
    display: none;
  }

  .emotion-36 .e1onlrbh4 {
    display: none;
  }
}

@media (min-width:1024px) {
  .emotion-36 .emotion-35 {
    padding: 0 20px;
  }

@media (min-width:1275px) {
    .emotion-36 .emotion-35 {
      max-width: 1240px;
      width: 100%;
      margin: 0 auto;
    }
}
}

.emotion-34 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 15px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  margin-right: 1em;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  background-position: center;
  background-size: contain;
  background-image: url([object Object]);
  background-repeat: no-repeat;
  width: 40px;
  height: 40px;
}

.emotion-12 {
  display: none;
  width: 100%;
}

.emotion-10 {
  width: 100%;
  height: 32px;
  position: relative;
  z-index: 1;
}

.emotion-6 .MuiInputBase-root:before {
  content: '';
  border: none;
}

.emotion-6 .MuiInputBase-root:after {
  border-color: #fff;
}

.emotion-6 .MuiInputBase-root:hover:before {
  content: none;
}

.emotion-6 .MuiInputBase-root:hover:after {
  content: none;
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

@media screen and (min-width:768px) {
  .emotion-6 .MuiInputBase-root:hover:after {
    content: '';
  }
}

@media screen and (min-width:768px) {
  .emotion-6 .MuiInputBase-input {
    color: #fff;
  }
}

.emotion-4 {
  color: #fff;
}

.emotion-8 {
  max-height: 500px;
  overflow-y: auto;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
}

.emotion-16 {
  display: block;
}

.emotion-28 {
  width: 220px;
  display: none;
}

@media screen and (min-width:768px) {
  .emotion-28 {
    display: inline-block;
  }
}

.emotion-26 {
  position: relative;
  height: 40px;
}

.emotion-24 {
  height: 40px;
  color: #fff;
}

.emotion-24 .MuiInputBase-root {
  height: 40px;
  color: #fff;
}

.emotion-24 .MuiInputBase-inputAdornedStart {
  padding-left: 16px;
}

.emotion-24 .MuiInputBase-input {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-24 .MuiOutlinedInput-notchedOutline {
  border-color: transparent;
}

.emotion-24 :hover .MuiOutlinedInput-notchedOutline {
  border-color: #fff;
}

.emotion-24 :active .MuiOutlinedInput-notchedOutline {
  border-color: #fff;
}

.emotion-18 {
  color: #fff;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-20 {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-30 {
  color: #fff;
}

@media screen and (min-width:1240px) {
  .emotion-48 {
    max-width: 1240px;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

.emotion-83 {
  background: #f9f9f9;
  border-top: 1px solid #e3e3e3;
  color: #999999;
  font-size: 14px;
  padding: 20px;
}

.emotion-81 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
}

@media (min-width:768px) {
  .emotion-81 {
    min-width: 400px;
    max-width: 800px;
    margin: auto;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:1024px) {
  .emotion-81 {
    max-width: 1240px;
  }
}

.emotion-75 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: none;
}

@media (min-width:768px) {
  .emotion-75 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-50 {
  color: #e25555;
  padding: 0 5px;
}

.emotion-73 {
  position: relative;
  height: 18px;
}

.emotion-73:hover .emotion-72 {
  visibility: visible;
}

.emotion-53 {
  width: 18px;
  height: 18px;
  margin: 0px 8px;
}

.emotion-71 {
  display: inline-grid;
  grid-template-columns: repeat(8,max-content);
  grid-gap: 0px 8px;
  position: absolute;
  background: #d3dddd;
  padding: 1px 4px;
  border-radius: 3px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  visibility: hidden;
  top: -2px;
}

.emotion-71:before {
  content: '';
  position: absolute;
  top: 29%;
  left: -4px;
  margin-left: -5px;
  border: 5px solid;
  border-color: #d3dddd transparent transparent transparent;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-55 {
  width: 18px;
  height: 18px;
}

.emotion-79 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width:768px) {
  .emotion-79 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-77 {
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  background-position: center;
  background-size: contain;
  background-image: url([object Object]);
  background-repeat: no-repeat;
  width: 30px;
  height: 30px;
}

.emotion-46 {
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  top: 50%;
  left: 50%;
  position: absolute;
}

.emotion-40 {
  margin: 0 0 30px 0;
  border-radius: 25px;
  box-shadow: 0 10px 20px 0 rgba(69,58,100,0.2);
  background: #f7f8f6;
}

.emotion-38 {
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  background-position: center;
  background-size: contain;
  background-image: url([object Object]);
  background-repeat: no-repeat;
  width: 90px;
  height: 90px;
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-42 {
  color: #4b5e40;
}

<div
  class="MuiBox-root MuiBox-root-7 emotion-85 emotion-86"
>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary emotion-36 emotion-37 MuiPaper-elevation4"
    data-testid="header"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular emotion-34 emotion-35 MuiToolbar-gutters"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular emotion-14 emotion-15 MuiToolbar-gutters"
      >
        <a
          class="emotion-2 emotion-3"
          href="/"
        >
          <div
            class="emotion-0 emotion-1"
          />
        </a>
        <div
          class="emotion-12 emotion-13"
        >
          <div
            class="emotion-10 emotion-11"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-1"
              class="react-autosuggest__container"
              role="combobox"
            >
              <div
                aria-autocomplete="list"
                aria-controls="react-autowhatever-1"
                class="MuiFormControl-root MuiTextField-root react-autosuggest__input emotion-6 emotion-7 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
                >
                  <div
                    class="MuiInputAdornment-root emotion-4 emotion-5 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart"
                    placeholder="Search Packages"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="MuiPaper-root react-autosuggest__suggestions-container emotion-8 emotion-9 MuiPaper-elevation1"
                id="react-autowhatever-1"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiToolbar-root MuiToolbar-regular emotion-32 emotion-33 MuiToolbar-gutters"
        data-testid="header-right"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root emotion-16 emotion-17 MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="emotion-28 emotion-29"
        >
          <div
            class="emotion-26 emotion-27"
          >
            <div
              class="MuiFormControl-root MuiTextField-root emotion-24 emotion-25"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root emotion-18 emotion-19"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
                  />
                </svg>
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  type="text"
                  value="English"
                />
                <div
                  class="emotion-22 emotion-23"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall"
                    tabindex="0"
                    title="Clear"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root emotion-20 emotion-21 MuiIconButton-colorInherit MuiIconButton-sizeSmall"
                    tabindex="0"
                    title="Expand"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-8 MuiOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend-9"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <a
          class="emotion-30 emotion-31"
          data-testid="header--tooltip-documentation"
          href="https://verdaccio.org/docs/en/installation"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </span>
        </a>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          data-testid="header--tooltip-info"
          id="header--button-registryInfo"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6.76 4.84l-1.8-1.79-1.41 1.41 1.79 1.79 1.42-1.41zM4 10.5H1v2h3v-2zm9-9.95h-2V3.5h2V.55zm7.45 3.91l-1.41-1.41-1.79 1.79 1.41 1.41 1.79-1.79zm-3.21 13.7l1.79 1.8 1.41-1.41-1.8-1.79-1.4 1.4zM20 10.5v2h3v-2h-3zm-8-5c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm-1 16.95h2V19.5h-2v2.95zm-7.45-3.91l1.41 1.41 1.79-1.8-1.41-1.41-1.79 1.8z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
          data-testid="header--button-login"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Login
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </header>
  <div
    class="MuiBox-root MuiBox-root-12 emotion-48 emotion-49"
  >
    <div
      class="container content"
      data-testid="home-page-container"
    >
      <div
        class="emotion-46 emotion-47"
        data-testid="loading"
      >
        <div
          class="emotion-40 emotion-41"
        >
          <div
            class="emotion-38 emotion-1"
          />
        </div>
        <div
          class="emotion-44 emotion-45"
        >
          <div
            class="MuiCircularProgress-root emotion-42 emotion-43 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 50px; height: 50px;"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-83 emotion-84"
  >
    <div
      class="emotion-81 emotion-82"
    >
      <div
        class="emotion-75 emotion-76"
      >
        Made with 
        <span
          class="emotion-50 emotion-51"
        >
          ♥
        </span>
         on
        <span
          class="emotion-73 emotion-74"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root emotion-52 emotion-53 emotion-54"
            focusable="false"
            viewBox="0 0 45 45"
          >
            <defs>
              <clippath
                id="prefix__a"
              >
                <path
                  d="M0 36h36V0H0v36z"
                />
              </clippath>
              <clippath
                id="prefix__b"
              >
                <path
                  d="M18 36C8.059 36 0 27.941 0 18S8.059 0 18 0s18 8.059 18 18-8.059 18-18 18z"
                />
              </clippath>
            </defs>
            <g
              clip-path="url(#prefix__a)"
              transform="matrix(1.25 0 0 -1.25 0 45)"
            >
              <path
                d="M36 18c0-9.941-8.059-18-18-18S0 8.059 0 18s8.059 18 18 18 18-8.059 18-18"
                fill="#88c9f9"
              />
            </g>
            <g
              clip-path="url(#prefix__b)"
              transform="matrix(1.25 0 0 -1.25 0 45)"
            >
              <path
                d="M3.627 28.952c-.45 2.93 2.195 4.156 3.607 4.47 1.412.314 2.776.62 2.933-.006.156-.628.311-1.46 1.173-1.148.862.314 3.043.56 4.063 1.342 1.02.783 2.244.787 3.264.473 1.02-.313 3.877-.227 3.25-1.167-.627-.94-1.825-.827-2.45-1.924-.628-1.099.171-1.826 1.033-1.826.865 0 1.71-.135 2.26.727.548.863-.383 2.463.324 2.357.706-.106 1.477-.866 2.03-2.043.547-1.176 1.408-.47 1.723-1.176.313-.705 2.04-2.039 1.177-1.804-.864.236-1.726.392-1.96-.47-.237-.863.388-1.726-.237-1.647-.627.08-.86-.089-1.725-.004-.862.083-1.333.631-2.039-.545-.705-1.175-1.254-1.96-1.567-2.509-.315-.549-.785-.86-.55-1.96.235-1.099-.628-.785-.628.156 0 .94-.548 1.098-1.253.942-.706-.157-1.803-.313-1.724-1.098.077-.784-.315-1.725.313-2.352.627-.629 1.33.076 1.723-.158.393-.237 1.525-.023 1.133-.416-.393-.39-1.76-.88-.976-1.509a4.831 4.831 0 011.893-.907c.313-.08.062.774 1.083 1.166 1.017.392 2.608 1.29 3 .584.391-.705.338-.595 1.75-.75 1.41-.156 1.79-.585 2.417-1.917.626-1.333.446-1.192 1.462-1.58 1.021-.394 1.678-.223.737-1.087-.94-.86-1.65-.814-2.199-1.833-.55-1.017-.153-1.73-1.25-2.75A20.755 20.755 0 0024 4c-.618-.37-2.162-2.07-3.083-2.667-.834-.54-1.083 0-1.083 0s.256 1.667.964 2.372c.704.705 1.105 3.344.87 4.128-.235.783-1.36 1.02-1.75 1.333-.393.312-1.418 1.548-1.418 2.334 0 .784 1.71 2.81 1.71 2.81.218-1.089-1.039.328-1.627.523-.47.157-1.542 1.656-2.459 1.814-.916.16-1.363.7-2.068 1.25-.706.55-2.43 1.332-2.353 2.195.08.862-1.725 1.568-2.038 1.568-.314 0-1.019 0-1.647 1.098-.627 1.098-1.725 2.196-1.41 2.98.312.783.391 1.726.233 2.588-.156.862-1.332 1.176-1.567.941-.235-.236-1.489-1.335-1.647-.315"
                fill="#5c913b"
              />
            </g>
          </svg>
          <span
            class="emotion-71 emotion-72"
          >
            <svg
              class="MuiSvgIcon-root emotion-55 emotion-54"
              focusable="false"
              role="img"
              viewBox="0 0 45 45"
            >
              <defs>
                <clippath
                  id="prefix__a"
                >
                  <path
                    d="M0 36h36V0H0v36z"
                  />
                </clippath>
              </defs>
              <g
                clip-path="url(#prefix__a)"
                transform="matrix(1.25 0 0 -1.25 0 45)"
              >
                <path
                  d="M36 9a4 4 0 00-4-4H4a4 4 0 00-4 4v18a4 4 0 004 4h28a4 4 0 004-4V9z"
                  fill="#c60a1d"
                />
                <path
                  d="M36 12H0v12h36V12z"
                  fill="#ffc400"
                />
                <path
                  d="M9 19v-3a3 3 0 116 0v3H9z"
                  fill="#ea596e"
                />
                <path
                  d="M12 17h3v3h-3v-3z"
                  fill="#f4a2b2"
                />
                <path
                  d="M12 17H9v3h3v-3z"
                  fill="#dd2e44"
                />
                <path
                  d="M15 21.5c0-.829-1.343-1.5-3-1.5s-3 .671-3 1.5 1.343 1.5 3 1.5 3-.671 3-1.5"
                  fill="#ea596e"
                />
                <path
                  d="M15 22.25c0 .414-1.343.75-3 .75s-3-.336-3-.75 1.343-.75 3-.75 3 .336 3 .75"
                  fill="#ffac33"
                />
                <path
                  d="M7 13h1v7H7v-7zm10 0h-1v7h1v-7z"
                  fill="#99aab5"
                />
                <path
                  d="M9 13H6v1h3v-1zm9 0h-3v1h3v-1zM8 20H7v1h1v-1zm9 0h-1v1h1v-1z"
                  fill="#66757f"
                />
              </g>
              <title>
                Spain
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-55 emotion-54"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M512 384c0 31.418-25.473 56.889-56.889 56.889H56.89C25.472 440.889 0 415.417 0 384V128c0-31.418 25.472-56.889 56.889-56.889H455.11C486.53 71.111 512 96.584 512 128v256z"
                fill="#265fb5"
              />
              <path
                d="M512 327.111H0V184.89h512v142.22z"
                fill="#eee"
              />
              <path
                d="M320.811 256c0 35.797-29.014 64.811-64.811 64.811-35.783 0-64.811-29.014-64.811-64.811s29.027-64.811 64.811-64.811c35.797 0 64.811 29.013 64.811 64.811"
                fill="#a9bf4c"
              />
              <path
                d="M312.889 256c0 31.418-25.473 56.889-56.889 56.889S199.111 287.416 199.111 256s25.473-56.889 56.889-56.889 56.889 25.471 56.889 56.889"
                fill="#eee"
              />
              <path
                d="M209.891 286.649l45.909-79.517 45.909 79.517H209.89z"
                fill="#265fb5"
              />
              <path
                d="M215.04 283.591l40.818-70.685 40.803 70.685H215.04z"
                fill="#55acee"
              />
              <path
                d="M215.04 283.591l9.841-17.052 61.483-.783 10.297 17.835H215.04z"
                fill="#bbddf5"
              />
              <path
                d="M222.891 272.441l15.331-12.445 6.67 7.553 5.774-6.215 4.893 4.892 4.665-5.12 5.561 5.12 5.106-5.334 4.665 5.334 4.451-4.892 7.325 9.102 1.338 2.674s-7.78 1.55-18.446.669c-10.667-.896-16.882 1.55-25.33 2.66-8.448 1.109-23.553-1.109-23.553-1.109l1.55-2.889z"
                fill="#5c913b"
              />
              <path
                d="M237.995 262.67l10.226 11.107-5.12.442-5.774-8.434.668-3.115zm12.231.883l8.22 7.338-3.782.654-3.996-5.546-.442-2.446zm10.439-.442l7.111 6.67L266 270.89l-5.774-6.229.44-1.55zm9.33 0l-2.888 2.66 1.338 1.565 1.55-4.225zm8.889.228l-3.328 4.224 1.109 1.99 2.446-4.664-.227-1.55z"
                fill="#e2f09f"
              />
              <path
                d="M256.426 233.671l.939 13.227 7.566-10.867-5.675 11.805 11.805-5.66-10.851 7.553 13.213.939-13.213.952 10.851 7.553-11.805-5.66 5.675 11.805-7.566-10.867-.939 13.226-.939-13.226-7.566 10.867 5.675-11.805-11.805 5.66 10.851-7.553-13.212-.953 13.212-.938-10.85-7.553 11.804 5.66-5.675-11.805 7.566 10.866.94-13.226z"
                fill="#bbddf5"
              />
              <path
                d="M256 244.665l-2.66 2.66s.654 4.011.441 4.679C253.554 252.658 256 256 256 256l3.327-3.996-.88-5.334-2.447-2.005z"
                fill="#dd2e44"
              />
              <path
                d="M257.28 240.071c10.894 0 17.109 5.334 17.109 5.334l-3.996-7.111s-6.443-4.893-13.995-4.893c-7.567 0-16 6.001-16 6.001l-3.783 7.553s9.771-6.884 20.665-6.884"
                fill="#269"
              />
              <path
                d="M257.28 240.071c10.894 0 17.109 5.334 17.109 5.334l-2.888-5.106s-7.78-4.665-15.331-4.665-16.896 5.987-16.896 5.987l-2.66 5.334c.001 0 9.772-6.884 20.666-6.884"
                fill="#ffcc4d"
              />
              <path
                d="M257.28 240.071c10.894 0 17.109 5.334 17.109 5.334l-2.005-3.327s-5.988-4.224-16.214-3.783c-7.553 0-18.005 5.561-18.005 5.561l-1.55 3.1c0-.001 9.771-6.885 20.665-6.885"
                fill="#dd2e44"
              />
              <path
                d="M264.291 322.873h-14.165V309.29h14.165v13.582zm-16.426-118.898h-10.183l-5.106-12.459 10.198-1.137 5.091 13.596zm23.21 5.66l-6.784-2.261 3.385-16.426 13.028 1.137-9.629 17.55zm-61.141 69.646l-19.811 4.523-.57-13.583 19.812-2.83.569 11.89zm5.106 14.152l-16.426 6.812-3.954-10.766 15.289-5.106 5.091 9.06zm109.269-12.444l-18.105-5.091v-9.63l20.366-2.83-2.261 17.55zm-9.003 18.674l-16.981-7.937 5.646-10.182 18.703 5.66-7.368 12.459z"
                fill="#eee"
              />
              <title>
                Nicaragua
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-55 emotion-54"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M0 384c0 31.418 25.473 56.889 56.889 56.889H455.11c31.42 0 56.89-25.473 56.89-56.889v-56.889H0V384z"
                fill="#138808"
              />
              <path
                d="M0 327.111h512V184.89H0v142.22z"
                fill="#eee"
              />
              <path
                d="M512 184.889V128c0-31.417-25.473-56.889-56.889-56.889H56.89C25.472 71.111 0 96.583 0 128v56.889h512z"
                fill="#f93"
              />
              <path
                d="M312.889 256c0-31.431-25.473-56.902-56.903-56.902-31.417 0-56.888 25.472-56.888 56.902 0 31.418 25.472 56.889 56.888 56.889 31.432 0 56.903-25.472 56.903-56.889"
                fill="navy"
              />
              <path
                d="M298.666 256c0-23.566-19.115-42.681-42.681-42.681S213.319 232.434 213.319 256s19.1 42.666 42.666 42.666 42.681-19.1 42.681-42.666"
                fill="#eee"
              />
              <path
                d="M256 213.334l2.076 32.199 14.251-28.943-10.396 30.535 24.235-21.305-21.291 24.249 30.535-10.396-28.942 14.25L298.666 256l-32.198 2.076 28.942 14.237-30.535-10.383 21.291 24.235-24.235-21.29 10.396 30.535-14.25-28.942L256 298.666l-2.076-32.198-14.252 28.942 10.397-30.535-24.249 21.291 21.305-24.235-30.535 10.383 28.942-14.236L213.334 256l32.199-2.076-28.943-14.251 30.535 10.396-21.305-24.249 24.249 21.305-10.396-30.535 14.25 28.943 2.077-32.2z"
                fill="navy"
                opacity="0.6"
              />
              <path
                d="M241.778 256c0-7.851 6.37-14.223 14.222-14.223s14.223 6.372 14.223 14.223-6.372 14.223-14.223 14.223-14.223-6.372-14.223-14.223"
                fill="navy"
              />
              <title>
                India
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-55 emotion-54"
              focusable="false"
              role="img"
              viewBox="0 0 45 45"
            >
              <defs>
                <clippath
                  id="prefix__a"
                >
                  <path
                    d="M0 36h36V0H0v36z"
                  />
                </clippath>
              </defs>
              <g
                clip-path="url(#prefix__a)"
                transform="matrix(1.25 0 0 -1.25 0 45)"
              >
                <path
                  d="M36 9a4 4 0 00-4-4H4a4 4 0 00-4 4v18a4 4 0 004 4h28a4 4 0 004-4V9z"
                  fill="#009b3a"
                />
                <path
                  d="M32.727 18L18 6.876 3.27 18 18 29.125 32.727 18z"
                  fill="#fedf01"
                />
                <path
                  d="M24.434 18.076a6.458 6.458 0 11-12.917 0 6.458 6.458 0 0112.917 0"
                  fill="#002776"
                />
                <path
                  d="M12.277 21.113a6.406 6.406 0 01-.672-2.023c3.994.29 9.417-1.892 11.744-4.596.402.604.7 1.28.882 2.004-2.871 2.809-7.916 4.63-11.954 4.615"
                  fill="#cbe9d4"
                />
                <path
                  d="M13 16.767h-1v1h1v-1zm1-2h-1v1h1v-1z"
                  fill="#88c9f9"
                />
                <path
                  d="M16 16.767h-1v1h1v-1zm2-1h-1v1h1v-1zm4-2h-1v1h1v-1zm-3-1h-1v1h1v-1zm3 6h-1v1h1v-1z"
                  fill="#55acee"
                />
                <path
                  d="M20 14.767h-1v1h1v-1z"
                  fill="#3b88c3"
                />
              </g>
              <title>
                Brazil
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-55 emotion-54"
              focusable="false"
              role="img"
              viewBox="0 0 45 45"
            >
              <defs>
                <clippath
                  id="prefix__a"
                >
                  <path
                    d="M0 36h36V0H0v36z"
                  />
                </clippath>
              </defs>
              <g
                clip-path="url(#prefix__a)"
                transform="matrix(1.25 0 0 -1.25 0 45)"
              >
                <path
                  d="M36 9a4 4 0 00-4-4H4a4 4 0 00-4 4v18a4 4 0 004 4h28a4 4 0 004-4V9z"
                  fill="#de2910"
                />
                <path
                  d="M7 25.049l.929-2.67 2.826-.06-2.253-1.706.819-2.707L7 19.52l-2.321-1.615.819 2.707-2.253 1.707 2.826.059.929 2.67zm6 3.423l.34-.688.759-.11-.549-.536.129-.756-.679.357-.679-.357.13.756-.55.536.76.11.339.688zm2-4l.34-.688.759-.11-.549-.536.129-.756-.679.357-.679-.357.13.756-.55.536.76.11.339.688zm0-4l.34-.688.759-.11-.549-.536.129-.756-.679.357-.679-.357.13.756-.55.536.76.11.339.688zm-2-3.999l.34-.69.759-.11-.549-.534.129-.757-.679.357-.679-.357.13.757-.55.535.76.11.339.689z"
                  fill="#ffde02"
                />
              </g>
              <title>
                China
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-55 emotion-54"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M473.655 88.276H38.345C17.167 88.276 0 105.443 0 126.621v73.471h512v-73.471c0-21.178-17.167-38.345-38.345-38.345zM0 385.379c0 21.177 17.167 38.345 38.345 38.345h435.31c21.177 0 38.345-17.167 38.345-38.345v-73.471H0v73.471z"
                fill="#ff4b55"
              />
              <path
                d="M0 200.09h512V311.9H0z"
                fill="#f5f5f5"
              />
              <title>
                Austria
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-55 emotion-54"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M473.655 88.276H38.345C17.167 88.276 0 105.443 0 126.621v73.471h512v-73.471c0-21.178-17.167-38.345-38.345-38.345z"
                fill="#464655"
              />
              <path
                d="M0 385.379c0 21.177 17.167 38.345 38.345 38.345h435.31c21.177 0 38.345-17.167 38.345-38.345v-73.471H0v73.471z"
                fill="#ffe15a"
              />
              <path
                d="M0 200.09h512V311.9H0z"
                fill="#ff4b55"
              />
              <title>
                Germany
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-55 emotion-54"
              focusable="false"
              role="img"
              viewBox="-60 -40 240 160"
            >
              <rect
                fill="#fe0000"
                height="100%"
                width="100%"
                x="-60"
                y="-40"
              />
              <rect
                fill="#000095"
                height="50%"
                width="50%"
                x="-60"
                y="-40"
              />
              <path
                d="M8 0L0 30-8 0l8-30M0 8l30-8L0-8l-30 8"
                fill="#fff"
                id="prefix__a"
              />
              <use
                transform="rotate(30)"
                xlink:href="#prefix__a"
              />
              <use
                transform="rotate(60)"
                xlink:href="#prefix__a"
              />
              <circle
                fill="#000095"
                r="17"
              />
              <circle
                fill="#fff"
                r="15"
              />
              <title>
                Taiwan
              </title>
            </svg>
          </span>
        </span>
      </div>
      <div
        class="emotion-79 emotion-80"
      >
        Powered by
        <div
          class="emotion-77 emotion-1"
        />
        / undefined
      </div>
    </div>
  </div>
</div>
`;

exports[`<App /> should display the Loading component at the beginning  1`] = `
.emotion-75 {
  background-color: #fff;
}

.emotion-36 {
  background-color: #4b5e40;
  color: #fff;
  min-height: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:768px) {
  .emotion-36 .emotion-13 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }

  .emotion-36 .emotion-17 {
    display: none;
  }

  .emotion-36 .e1onlrbh4 {
    display: none;
  }
}

@media (min-width:1024px) {
  .emotion-36 .emotion-35 {
    padding: 0 20px;
  }

@media (min-width:1275px) {
    .emotion-36 .emotion-35 {
      max-width: 1240px;
      width: 100%;
      margin: 0 auto;
    }
}
}

.emotion-34 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 15px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  margin-right: 1em;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  background-position: center;
  background-size: contain;
  background-image: url([object Object]);
  background-repeat: no-repeat;
  width: 40px;
  height: 40px;
}

.emotion-12 {
  display: none;
  width: 100%;
}

.emotion-10 {
  width: 100%;
  height: 32px;
  position: relative;
  z-index: 1;
}

.emotion-6 .MuiInputBase-root:before {
  content: '';
  border: none;
}

.emotion-6 .MuiInputBase-root:after {
  border-color: #fff;
}

.emotion-6 .MuiInputBase-root:hover:before {
  content: none;
}

.emotion-6 .MuiInputBase-root:hover:after {
  content: none;
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

@media screen and (min-width:768px) {
  .emotion-6 .MuiInputBase-root:hover:after {
    content: '';
  }
}

@media screen and (min-width:768px) {
  .emotion-6 .MuiInputBase-input {
    color: #fff;
  }
}

.emotion-4 {
  color: #fff;
}

.emotion-8 {
  max-height: 500px;
  overflow-y: auto;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
}

.emotion-16 {
  display: block;
}

.emotion-28 {
  width: 220px;
  display: none;
}

@media screen and (min-width:768px) {
  .emotion-28 {
    display: inline-block;
  }
}

.emotion-26 {
  position: relative;
  height: 40px;
}

.emotion-24 {
  height: 40px;
  color: #fff;
}

.emotion-24 .MuiInputBase-root {
  height: 40px;
  color: #fff;
}

.emotion-24 .MuiInputBase-inputAdornedStart {
  padding-left: 16px;
}

.emotion-24 .MuiInputBase-input {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-24 .MuiOutlinedInput-notchedOutline {
  border-color: transparent;
}

.emotion-24 :hover .MuiOutlinedInput-notchedOutline {
  border-color: #fff;
}

.emotion-24 :active .MuiOutlinedInput-notchedOutline {
  border-color: #fff;
}

.emotion-18 {
  color: #fff;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-20 {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-30 {
  color: #fff;
}

@media screen and (min-width:1240px) {
  .emotion-38 {
    max-width: 1240px;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

.emotion-73 {
  background: #f9f9f9;
  border-top: 1px solid #e3e3e3;
  color: #999999;
  font-size: 14px;
  padding: 20px;
}

.emotion-71 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 100%;
}

@media (min-width:768px) {
  .emotion-71 {
    min-width: 400px;
    max-width: 800px;
    margin: auto;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:1024px) {
  .emotion-71 {
    max-width: 1240px;
  }
}

.emotion-65 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: none;
}

@media (min-width:768px) {
  .emotion-65 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-40 {
  color: #e25555;
  padding: 0 5px;
}

.emotion-63 {
  position: relative;
  height: 18px;
}

.emotion-63:hover .emotion-62 {
  visibility: visible;
}

.emotion-43 {
  width: 18px;
  height: 18px;
  margin: 0px 8px;
}

.emotion-61 {
  display: inline-grid;
  grid-template-columns: repeat(8,max-content);
  grid-gap: 0px 8px;
  position: absolute;
  background: #d3dddd;
  padding: 1px 4px;
  border-radius: 3px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  visibility: hidden;
  top: -2px;
}

.emotion-61:before {
  content: '';
  position: absolute;
  top: 29%;
  left: -4px;
  margin-left: -5px;
  border: 5px solid;
  border-color: #d3dddd transparent transparent transparent;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-45 {
  width: 18px;
  height: 18px;
}

.emotion-69 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width:768px) {
  .emotion-69 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-67 {
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  background-position: center;
  background-size: contain;
  background-image: url([object Object]);
  background-repeat: no-repeat;
  width: 30px;
  height: 30px;
}

<div
  class="MuiBox-root MuiBox-root-1 emotion-75 emotion-76"
  style="display: none;"
>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary emotion-36 emotion-37 MuiPaper-elevation4"
    data-testid="header"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular emotion-34 emotion-35 MuiToolbar-gutters"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular emotion-14 emotion-15 MuiToolbar-gutters"
      >
        <a
          class="emotion-2 emotion-3"
          href="/"
        >
          <div
            class="emotion-0 emotion-1"
          />
        </a>
        <div
          class="emotion-12 emotion-13"
        >
          <div
            class="emotion-10 emotion-11"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-1"
              class="react-autosuggest__container"
              role="combobox"
            >
              <div
                aria-autocomplete="list"
                aria-controls="react-autowhatever-1"
                class="MuiFormControl-root MuiTextField-root react-autosuggest__input emotion-6 emotion-7 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
                >
                  <div
                    class="MuiInputAdornment-root emotion-4 emotion-5 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart"
                    placeholder="Search Packages"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="MuiPaper-root react-autosuggest__suggestions-container emotion-8 emotion-9 MuiPaper-elevation1"
                id="react-autowhatever-1"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiToolbar-root MuiToolbar-regular emotion-32 emotion-33 MuiToolbar-gutters"
        data-testid="header-right"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root emotion-16 emotion-17 MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="emotion-28 emotion-29"
        >
          <div
            class="emotion-26 emotion-27"
          >
            <div
              class="MuiFormControl-root MuiTextField-root emotion-24 emotion-25"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root emotion-18 emotion-19"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
                  />
                </svg>
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  type="text"
                  value="English"
                />
                <div
                  class="emotion-22 emotion-23"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall"
                    tabindex="0"
                    title="Clear"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MuiIconButton-root emotion-20 emotion-21 MuiIconButton-colorInherit MuiIconButton-sizeSmall"
                    tabindex="0"
                    title="Expand"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend-3"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <a
          class="emotion-30 emotion-31"
          data-testid="header--tooltip-documentation"
          href="https://verdaccio.org/docs/en/installation"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </span>
        </a>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          data-testid="header--tooltip-info"
          id="header--button-registryInfo"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6.76 4.84l-1.8-1.79-1.41 1.41 1.79 1.79 1.42-1.41zM4 10.5H1v2h3v-2zm9-9.95h-2V3.5h2V.55zm7.45 3.91l-1.41-1.41-1.79 1.79 1.41 1.41 1.79-1.79zm-3.21 13.7l1.79 1.8 1.41-1.41-1.8-1.79-1.4 1.4zM20 10.5v2h3v-2h-3zm-8-5c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm-1 16.95h2V19.5h-2v2.95zm-7.45-3.91l1.41 1.41 1.79-1.8-1.41-1.41-1.79 1.8z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
          data-testid="header--button-login"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Login
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </header>
  <div
    class="MuiBox-root MuiBox-root-6 emotion-38 emotion-39"
  />
  <div
    class="emotion-73 emotion-74"
  >
    <div
      class="emotion-71 emotion-72"
    >
      <div
        class="emotion-65 emotion-66"
      >
        Made with 
        <span
          class="emotion-40 emotion-41"
        >
          ♥
        </span>
         on
        <span
          class="emotion-63 emotion-64"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root emotion-42 emotion-43 emotion-44"
            focusable="false"
            viewBox="0 0 45 45"
          >
            <defs>
              <clippath
                id="prefix__a"
              >
                <path
                  d="M0 36h36V0H0v36z"
                />
              </clippath>
              <clippath
                id="prefix__b"
              >
                <path
                  d="M18 36C8.059 36 0 27.941 0 18S8.059 0 18 0s18 8.059 18 18-8.059 18-18 18z"
                />
              </clippath>
            </defs>
            <g
              clip-path="url(#prefix__a)"
              transform="matrix(1.25 0 0 -1.25 0 45)"
            >
              <path
                d="M36 18c0-9.941-8.059-18-18-18S0 8.059 0 18s8.059 18 18 18 18-8.059 18-18"
                fill="#88c9f9"
              />
            </g>
            <g
              clip-path="url(#prefix__b)"
              transform="matrix(1.25 0 0 -1.25 0 45)"
            >
              <path
                d="M3.627 28.952c-.45 2.93 2.195 4.156 3.607 4.47 1.412.314 2.776.62 2.933-.006.156-.628.311-1.46 1.173-1.148.862.314 3.043.56 4.063 1.342 1.02.783 2.244.787 3.264.473 1.02-.313 3.877-.227 3.25-1.167-.627-.94-1.825-.827-2.45-1.924-.628-1.099.171-1.826 1.033-1.826.865 0 1.71-.135 2.26.727.548.863-.383 2.463.324 2.357.706-.106 1.477-.866 2.03-2.043.547-1.176 1.408-.47 1.723-1.176.313-.705 2.04-2.039 1.177-1.804-.864.236-1.726.392-1.96-.47-.237-.863.388-1.726-.237-1.647-.627.08-.86-.089-1.725-.004-.862.083-1.333.631-2.039-.545-.705-1.175-1.254-1.96-1.567-2.509-.315-.549-.785-.86-.55-1.96.235-1.099-.628-.785-.628.156 0 .94-.548 1.098-1.253.942-.706-.157-1.803-.313-1.724-1.098.077-.784-.315-1.725.313-2.352.627-.629 1.33.076 1.723-.158.393-.237 1.525-.023 1.133-.416-.393-.39-1.76-.88-.976-1.509a4.831 4.831 0 011.893-.907c.313-.08.062.774 1.083 1.166 1.017.392 2.608 1.29 3 .584.391-.705.338-.595 1.75-.75 1.41-.156 1.79-.585 2.417-1.917.626-1.333.446-1.192 1.462-1.58 1.021-.394 1.678-.223.737-1.087-.94-.86-1.65-.814-2.199-1.833-.55-1.017-.153-1.73-1.25-2.75A20.755 20.755 0 0024 4c-.618-.37-2.162-2.07-3.083-2.667-.834-.54-1.083 0-1.083 0s.256 1.667.964 2.372c.704.705 1.105 3.344.87 4.128-.235.783-1.36 1.02-1.75 1.333-.393.312-1.418 1.548-1.418 2.334 0 .784 1.71 2.81 1.71 2.81.218-1.089-1.039.328-1.627.523-.47.157-1.542 1.656-2.459 1.814-.916.16-1.363.7-2.068 1.25-.706.55-2.43 1.332-2.353 2.195.08.862-1.725 1.568-2.038 1.568-.314 0-1.019 0-1.647 1.098-.627 1.098-1.725 2.196-1.41 2.98.312.783.391 1.726.233 2.588-.156.862-1.332 1.176-1.567.941-.235-.236-1.489-1.335-1.647-.315"
                fill="#5c913b"
              />
            </g>
          </svg>
          <span
            class="emotion-61 emotion-62"
          >
            <svg
              class="MuiSvgIcon-root emotion-45 emotion-44"
              focusable="false"
              role="img"
              viewBox="0 0 45 45"
            >
              <defs>
                <clippath
                  id="prefix__a"
                >
                  <path
                    d="M0 36h36V0H0v36z"
                  />
                </clippath>
              </defs>
              <g
                clip-path="url(#prefix__a)"
                transform="matrix(1.25 0 0 -1.25 0 45)"
              >
                <path
                  d="M36 9a4 4 0 00-4-4H4a4 4 0 00-4 4v18a4 4 0 004 4h28a4 4 0 004-4V9z"
                  fill="#c60a1d"
                />
                <path
                  d="M36 12H0v12h36V12z"
                  fill="#ffc400"
                />
                <path
                  d="M9 19v-3a3 3 0 116 0v3H9z"
                  fill="#ea596e"
                />
                <path
                  d="M12 17h3v3h-3v-3z"
                  fill="#f4a2b2"
                />
                <path
                  d="M12 17H9v3h3v-3z"
                  fill="#dd2e44"
                />
                <path
                  d="M15 21.5c0-.829-1.343-1.5-3-1.5s-3 .671-3 1.5 1.343 1.5 3 1.5 3-.671 3-1.5"
                  fill="#ea596e"
                />
                <path
                  d="M15 22.25c0 .414-1.343.75-3 .75s-3-.336-3-.75 1.343-.75 3-.75 3 .336 3 .75"
                  fill="#ffac33"
                />
                <path
                  d="M7 13h1v7H7v-7zm10 0h-1v7h1v-7z"
                  fill="#99aab5"
                />
                <path
                  d="M9 13H6v1h3v-1zm9 0h-3v1h3v-1zM8 20H7v1h1v-1zm9 0h-1v1h1v-1z"
                  fill="#66757f"
                />
              </g>
              <title>
                Spain
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-45 emotion-44"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M512 384c0 31.418-25.473 56.889-56.889 56.889H56.89C25.472 440.889 0 415.417 0 384V128c0-31.418 25.472-56.889 56.889-56.889H455.11C486.53 71.111 512 96.584 512 128v256z"
                fill="#265fb5"
              />
              <path
                d="M512 327.111H0V184.89h512v142.22z"
                fill="#eee"
              />
              <path
                d="M320.811 256c0 35.797-29.014 64.811-64.811 64.811-35.783 0-64.811-29.014-64.811-64.811s29.027-64.811 64.811-64.811c35.797 0 64.811 29.013 64.811 64.811"
                fill="#a9bf4c"
              />
              <path
                d="M312.889 256c0 31.418-25.473 56.889-56.889 56.889S199.111 287.416 199.111 256s25.473-56.889 56.889-56.889 56.889 25.471 56.889 56.889"
                fill="#eee"
              />
              <path
                d="M209.891 286.649l45.909-79.517 45.909 79.517H209.89z"
                fill="#265fb5"
              />
              <path
                d="M215.04 283.591l40.818-70.685 40.803 70.685H215.04z"
                fill="#55acee"
              />
              <path
                d="M215.04 283.591l9.841-17.052 61.483-.783 10.297 17.835H215.04z"
                fill="#bbddf5"
              />
              <path
                d="M222.891 272.441l15.331-12.445 6.67 7.553 5.774-6.215 4.893 4.892 4.665-5.12 5.561 5.12 5.106-5.334 4.665 5.334 4.451-4.892 7.325 9.102 1.338 2.674s-7.78 1.55-18.446.669c-10.667-.896-16.882 1.55-25.33 2.66-8.448 1.109-23.553-1.109-23.553-1.109l1.55-2.889z"
                fill="#5c913b"
              />
              <path
                d="M237.995 262.67l10.226 11.107-5.12.442-5.774-8.434.668-3.115zm12.231.883l8.22 7.338-3.782.654-3.996-5.546-.442-2.446zm10.439-.442l7.111 6.67L266 270.89l-5.774-6.229.44-1.55zm9.33 0l-2.888 2.66 1.338 1.565 1.55-4.225zm8.889.228l-3.328 4.224 1.109 1.99 2.446-4.664-.227-1.55z"
                fill="#e2f09f"
              />
              <path
                d="M256.426 233.671l.939 13.227 7.566-10.867-5.675 11.805 11.805-5.66-10.851 7.553 13.213.939-13.213.952 10.851 7.553-11.805-5.66 5.675 11.805-7.566-10.867-.939 13.226-.939-13.226-7.566 10.867 5.675-11.805-11.805 5.66 10.851-7.553-13.212-.953 13.212-.938-10.85-7.553 11.804 5.66-5.675-11.805 7.566 10.866.94-13.226z"
                fill="#bbddf5"
              />
              <path
                d="M256 244.665l-2.66 2.66s.654 4.011.441 4.679C253.554 252.658 256 256 256 256l3.327-3.996-.88-5.334-2.447-2.005z"
                fill="#dd2e44"
              />
              <path
                d="M257.28 240.071c10.894 0 17.109 5.334 17.109 5.334l-3.996-7.111s-6.443-4.893-13.995-4.893c-7.567 0-16 6.001-16 6.001l-3.783 7.553s9.771-6.884 20.665-6.884"
                fill="#269"
              />
              <path
                d="M257.28 240.071c10.894 0 17.109 5.334 17.109 5.334l-2.888-5.106s-7.78-4.665-15.331-4.665-16.896 5.987-16.896 5.987l-2.66 5.334c.001 0 9.772-6.884 20.666-6.884"
                fill="#ffcc4d"
              />
              <path
                d="M257.28 240.071c10.894 0 17.109 5.334 17.109 5.334l-2.005-3.327s-5.988-4.224-16.214-3.783c-7.553 0-18.005 5.561-18.005 5.561l-1.55 3.1c0-.001 9.771-6.885 20.665-6.885"
                fill="#dd2e44"
              />
              <path
                d="M264.291 322.873h-14.165V309.29h14.165v13.582zm-16.426-118.898h-10.183l-5.106-12.459 10.198-1.137 5.091 13.596zm23.21 5.66l-6.784-2.261 3.385-16.426 13.028 1.137-9.629 17.55zm-61.141 69.646l-19.811 4.523-.57-13.583 19.812-2.83.569 11.89zm5.106 14.152l-16.426 6.812-3.954-10.766 15.289-5.106 5.091 9.06zm109.269-12.444l-18.105-5.091v-9.63l20.366-2.83-2.261 17.55zm-9.003 18.674l-16.981-7.937 5.646-10.182 18.703 5.66-7.368 12.459z"
                fill="#eee"
              />
              <title>
                Nicaragua
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-45 emotion-44"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M0 384c0 31.418 25.473 56.889 56.889 56.889H455.11c31.42 0 56.89-25.473 56.89-56.889v-56.889H0V384z"
                fill="#138808"
              />
              <path
                d="M0 327.111h512V184.89H0v142.22z"
                fill="#eee"
              />
              <path
                d="M512 184.889V128c0-31.417-25.473-56.889-56.889-56.889H56.89C25.472 71.111 0 96.583 0 128v56.889h512z"
                fill="#f93"
              />
              <path
                d="M312.889 256c0-31.431-25.473-56.902-56.903-56.902-31.417 0-56.888 25.472-56.888 56.902 0 31.418 25.472 56.889 56.888 56.889 31.432 0 56.903-25.472 56.903-56.889"
                fill="navy"
              />
              <path
                d="M298.666 256c0-23.566-19.115-42.681-42.681-42.681S213.319 232.434 213.319 256s19.1 42.666 42.666 42.666 42.681-19.1 42.681-42.666"
                fill="#eee"
              />
              <path
                d="M256 213.334l2.076 32.199 14.251-28.943-10.396 30.535 24.235-21.305-21.291 24.249 30.535-10.396-28.942 14.25L298.666 256l-32.198 2.076 28.942 14.237-30.535-10.383 21.291 24.235-24.235-21.29 10.396 30.535-14.25-28.942L256 298.666l-2.076-32.198-14.252 28.942 10.397-30.535-24.249 21.291 21.305-24.235-30.535 10.383 28.942-14.236L213.334 256l32.199-2.076-28.943-14.251 30.535 10.396-21.305-24.249 24.249 21.305-10.396-30.535 14.25 28.943 2.077-32.2z"
                fill="navy"
                opacity="0.6"
              />
              <path
                d="M241.778 256c0-7.851 6.37-14.223 14.222-14.223s14.223 6.372 14.223 14.223-6.372 14.223-14.223 14.223-14.223-6.372-14.223-14.223"
                fill="navy"
              />
              <title>
                India
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-45 emotion-44"
              focusable="false"
              role="img"
              viewBox="0 0 45 45"
            >
              <defs>
                <clippath
                  id="prefix__a"
                >
                  <path
                    d="M0 36h36V0H0v36z"
                  />
                </clippath>
              </defs>
              <g
                clip-path="url(#prefix__a)"
                transform="matrix(1.25 0 0 -1.25 0 45)"
              >
                <path
                  d="M36 9a4 4 0 00-4-4H4a4 4 0 00-4 4v18a4 4 0 004 4h28a4 4 0 004-4V9z"
                  fill="#009b3a"
                />
                <path
                  d="M32.727 18L18 6.876 3.27 18 18 29.125 32.727 18z"
                  fill="#fedf01"
                />
                <path
                  d="M24.434 18.076a6.458 6.458 0 11-12.917 0 6.458 6.458 0 0112.917 0"
                  fill="#002776"
                />
                <path
                  d="M12.277 21.113a6.406 6.406 0 01-.672-2.023c3.994.29 9.417-1.892 11.744-4.596.402.604.7 1.28.882 2.004-2.871 2.809-7.916 4.63-11.954 4.615"
                  fill="#cbe9d4"
                />
                <path
                  d="M13 16.767h-1v1h1v-1zm1-2h-1v1h1v-1z"
                  fill="#88c9f9"
                />
                <path
                  d="M16 16.767h-1v1h1v-1zm2-1h-1v1h1v-1zm4-2h-1v1h1v-1zm-3-1h-1v1h1v-1zm3 6h-1v1h1v-1z"
                  fill="#55acee"
                />
                <path
                  d="M20 14.767h-1v1h1v-1z"
                  fill="#3b88c3"
                />
              </g>
              <title>
                Brazil
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-45 emotion-44"
              focusable="false"
              role="img"
              viewBox="0 0 45 45"
            >
              <defs>
                <clippath
                  id="prefix__a"
                >
                  <path
                    d="M0 36h36V0H0v36z"
                  />
                </clippath>
              </defs>
              <g
                clip-path="url(#prefix__a)"
                transform="matrix(1.25 0 0 -1.25 0 45)"
              >
                <path
                  d="M36 9a4 4 0 00-4-4H4a4 4 0 00-4 4v18a4 4 0 004 4h28a4 4 0 004-4V9z"
                  fill="#de2910"
                />
                <path
                  d="M7 25.049l.929-2.67 2.826-.06-2.253-1.706.819-2.707L7 19.52l-2.321-1.615.819 2.707-2.253 1.707 2.826.059.929 2.67zm6 3.423l.34-.688.759-.11-.549-.536.129-.756-.679.357-.679-.357.13.756-.55.536.76.11.339.688zm2-4l.34-.688.759-.11-.549-.536.129-.756-.679.357-.679-.357.13.756-.55.536.76.11.339.688zm0-4l.34-.688.759-.11-.549-.536.129-.756-.679.357-.679-.357.13.756-.55.536.76.11.339.688zm-2-3.999l.34-.69.759-.11-.549-.534.129-.757-.679.357-.679-.357.13.757-.55.535.76.11.339.689z"
                  fill="#ffde02"
                />
              </g>
              <title>
                China
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-45 emotion-44"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M473.655 88.276H38.345C17.167 88.276 0 105.443 0 126.621v73.471h512v-73.471c0-21.178-17.167-38.345-38.345-38.345zM0 385.379c0 21.177 17.167 38.345 38.345 38.345h435.31c21.177 0 38.345-17.167 38.345-38.345v-73.471H0v73.471z"
                fill="#ff4b55"
              />
              <path
                d="M0 200.09h512V311.9H0z"
                fill="#f5f5f5"
              />
              <title>
                Austria
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-45 emotion-44"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M473.655 88.276H38.345C17.167 88.276 0 105.443 0 126.621v73.471h512v-73.471c0-21.178-17.167-38.345-38.345-38.345z"
                fill="#464655"
              />
              <path
                d="M0 385.379c0 21.177 17.167 38.345 38.345 38.345h435.31c21.177 0 38.345-17.167 38.345-38.345v-73.471H0v73.471z"
                fill="#ffe15a"
              />
              <path
                d="M0 200.09h512V311.9H0z"
                fill="#ff4b55"
              />
              <title>
                Germany
              </title>
            </svg>
            <svg
              class="MuiSvgIcon-root emotion-45 emotion-44"
              focusable="false"
              role="img"
              viewBox="-60 -40 240 160"
            >
              <rect
                fill="#fe0000"
                height="100%"
                width="100%"
                x="-60"
                y="-40"
              />
              <rect
                fill="#000095"
                height="50%"
                width="50%"
                x="-60"
                y="-40"
              />
              <path
                d="M8 0L0 30-8 0l8-30M0 8l30-8L0-8l-30 8"
                fill="#fff"
                id="prefix__a"
              />
              <use
                transform="rotate(30)"
                xlink:href="#prefix__a"
              />
              <use
                transform="rotate(60)"
                xlink:href="#prefix__a"
              />
              <circle
                fill="#000095"
                r="17"
              />
              <circle
                fill="#fff"
                r="15"
              />
              <title>
                Taiwan
              </title>
            </svg>
          </span>
        </span>
      </div>
      <div
        class="emotion-69 emotion-70"
      >
        Powered by
        <div
          class="emotion-67 emotion-1"
        />
        / undefined
      </div>
    </div>
  </div>
</div>
`;
